# irods_client_s3_api

./: CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build_packages.sh  irods_builder.Dockerfile  irods_runner.Dockerfile
.github/workflows/: build-and-test-s3-api-ubuntu.yml  build-irods-s3-api-ubuntu.yml
core/: CMakeLists.txt
core/include/irods/private/s3_api/: authentication.hpp  bucket.hpp  common.hpp  configuration.hpp  globals.hpp  session.hpp
core/src/: authentication.cpp  bucket_plugin.cpp  common.cpp  configuration.cpp  globals.cpp  main.cpp  session.cpp
endpoints/: CMakeLists.txt
endpoints/s3/: CMakeLists.txt
endpoints/s3/include/irods/private/s3_api/: listobjects.hpp
endpoints/s3/src/: abortmultipartupload.cpp  completemultipartupload.cpp  copyobject.cpp  createmultipartupload.cpp  deleteobject.cpp  deleteobjects.cpp  getobject.cpp  headbucket.cpp  headobject.cpp  listbuckets.cpp  listobjects.cpp  listobjects_common.cpp  listobjectsv2.cpp  putobject.cpp
endpoints/shared/include/irods/private/s3_api/: s3_api.hpp
plugins/: CMakeLists.txt
plugins/bucket_mapping/: CMakeLists.txt
plugins/bucket_mapping/src/: local_file.cpp
plugins/user_mapping/: CMakeLists.txt
plugins/user_mapping/src/: local_file.cpp
src/: main.cpp
tests/: getobject_test.py  listobject_test.py  run_all_tests.py
tests/docker/: bucket_mappings.json  compose-irods-5.0.2.yml  compose-irods4.yml  compose-irods5.yml  compose.yml  config.json  docker-compose.yml  user_mappings.json
tests/docker/irods_catalog_provider/: irods4.Dockerfile  irods5.Dockerfile
tests/docker/irods_catalog_provider-irods4/: Dockerfile  entrypoint.sh
tests/docker/irods_catalog_provider-irods5/: Dockerfile  entrypoint.sh
tests/docker/test_runner/: Dockerfile  entrypoint.sh
unit_tests/: CMakeLists.txt  plugins.cpp
